crates/mdh-observe/tests/snapshots/fixtures__nia_topic_under_status_bar.snap
---
source: crates/mdh-observe/tests/fixtures.rs
expression: "snapshot(concat! (stringify! (nia_topic_under_status_bar), \"_api36\"))"
---
raw: 53 nodes, ~5181 tokens | compact: 9 nodes, ~121 tokens

[e1] list scrollable
  [e2] item "Back"
  [e3] checkbox "NOT FOLLOWING" unchecked
  [e4] "Compose"
  [e5] "All the latest and greatest news on Jetpack Compose - Android’s modern toolkit for building native user interfaces."
  [e6] checkbox "Bookmark" · "The new Google Pixel Watch is here  — start building for Wear OS! ⌚ · Oct 6, 2022 • Article 📚 · We launched the Google P…" unchecked #newsResourceCard:2
[e7] button "For you"
[e8] button "Saved"
[e9] "Interests"
